# squirrel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_test.sh  main.c
src/: position.h  token.h
src/ast/: ast.c  ast.h  ast_type.c  ast_type.h  type.c  type.h
src/common/: global.c  global.h  hashmap.c  hashmap.h  position.h  scope.c  scope.h
src/front/: token.c  token.h
src/ir/: ir.c  ir.h  ir_gen.c  ir_gen.h  ir_optimize.c  ir_optimize.h
src/lex/: lex.c  lex.h  lexer.c  lexer.h  token.c  token.h
src/semantic/: semantic.c  semantic.h
src/syntax/: syntax.c  syntax.h  syntaxer.h
test/: decl_test.sl  hashmap_test.c  ir_optimize.txt  lex_test.sl  lexer_test.c  program.sl  syntax_test.c  test.c  test_lex.sl  test_optimize.sl
